[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelHoverPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/images/levelselect/level_select_panel.png" type="Texture" id=3]
[ext_resource path="res://assets/images/levelselect/greystar.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 2 )

[node name="LevelHoverPanel" type="Node2D"]
z_index = 10
script = ExtResource( 1 )

[node name="StageName" type="Label" parent="."]
margin_left = -60.0
margin_top = -117.0
margin_right = 62.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 1 )
text = "Stage 01"

[node name="Background" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 3 )

[node name="Star1" type="Sprite" parent="."]
position = Vector2( -38, -132 )
texture = ExtResource( 4 )

[node name="Star2" type="Sprite" parent="."]
position = Vector2( 0, -132 )
texture = ExtResource( 4 )

[node name="Star3" type="Sprite" parent="."]
position = Vector2( 38, -132 )
texture = ExtResource( 4 )

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = -63.8855
margin_top = -76.0773
margin_right = 28.1145
margin_bottom = -53.0773
custom_fonts/font = SubResource( 2 )
text = "Highscore:"

[node name="BestTimeLabel" type="Label" parent="."]
margin_left = -64.3731
margin_top = -47.7921
margin_right = 27.6269
margin_bottom = -24.7921
custom_fonts/font = SubResource( 2 )
text = "Best Time:"

[node name="LevelDescriptionLabel" type="Label" parent="."]
margin_left = -67.0
margin_top = -17.0
margin_right = 68.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 3 )
text = "The Prince of Vaelan is finally ready to head out and reclaim his throne. Warm up on the Monsters harassing your Callan hosts!"
autowrap = true

